--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,8 +1,28 @@
-  name: Commit and Push Changes
-  run: |
-    git config --global user.email "action@github.com"
-    git config --global user.name "GitHub Action"
-    git commit -am "🔁 Update tracker timestamp: $ts" || echo "No changes"
-    git push
-  env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+name: Update README for Tracker
+
+on:
+  schedule:
+    - cron: '0 * * * *'  # Runs every hour
+  workflow_dispatch:      # Allows manual runs from GitHub UI
+
+jobs:
+  update-readme:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+
+      - name: Update README Timestamp
+        run: |
+          ts=$(date)
+          echo "⏱ Last update: $ts" > README.md
+
+      - name: Commit and Push Changes
+        run: |
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
+          git add README.md
+          git commit -m "🔁 Update tracker timestamp: $ts" || echo "No changes"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
